# hermes-max-stt

./: AGENTS.md  CHANGELOG.md  CHANGELOG_EN.md  README.md  README_EN.md  adapter.py  after-install.md  cliff-ru.toml  cliff.toml  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: webhook.md  webhook_EN.md
scripts/: apply-core-fix.py  diagnose.sh  release.sh  transcribe_audio.py
skills/max-gateway/: SKILL.md
tests/: test_adapter.py  test_file_send.py  test_interactive.py  test_openclaw_improvements.py  test_tables.py
