[project]
name = "hermes-max-stt"
version = "2.1.3"
description = "Hermes Agent MAX messenger adapter with STT voice transcription"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alexander / Hermes Agent community"}
]
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
